FIX - overflow

--- a/front/styles/globals.scss
+++ b/front/styles/globals.scss
@@ -8,6 +8,7 @@ html, body {
   font-family: 'Spoqa Han Sans Neo', 'Spoqa Han Sans JP', sans-serif !important;
   background-color: #fff;
   overflow-x: hidden;
+  overflow: hidden;
 }
 
 a {
